   * Renamed [foreach] variable= to array=
   * Renamed [foreach] item_var= to variable=
   * Fixed several bugs in the name generation of the map generator
   * Fixed issues with using [endlevel] in victory/defeat events
   * The {MAGENTA_IS_THE_TEAM_COLOR} macro is no longer needed in [unit_type]
     It is now the default behaviour unless overridden with the flag_rgb key.
* Lua API:
   * Added new functions wesnoth.fire_event_by_id and fire_event_by_name. The
     old function wesnoth.fire_event is now an alias for wesnoth.fire_event_by_name
   * Added new function wesnoth.remove_modifications, which removes applied
     modifications of the chosen type from a unit. The most efficient use is to
     remove all modifications with a specific duration value.
     Also callable as u:remove_modifications.
   * The built-in conditionals have_unit, have_location, and variable are now
     present in the wesnoth.wml_conditionals table. This means they can be
     directly called, extended with new features, or even overridden with custom
     implementations.
   * New recall_filter field in unit proxy returns the [filter_recall] config
* Performance:
   * When a heuristic determines that it's probably faster, the game predicts
     battle
     outcome by simulating a few thousand fights instead of calculating exact
     probabilities. This method is inexact, but in very complex battles
     (extremely high HP, drain, slow, berserk, etc.) it's significantly faster than the
     default damage calculation method.
* Miscellaneous and bug fixes:
   * Fixed a stray ; character appearing pre-entered in the command console.
   * Fixed bug in wesnothd that was causing server crashes if game with
     multiple network and local players was ran.
   * Added a tab to run the wmlxgettext tool to GUI.pyw
   * Fixed problem with Spectre's hitpoint bar positioning.
   * Show correct number of attacks in case of swarm weapon special (bug #24978)